syntax = "proto3";

package reward.v1;
option go_package="reward/v1;rewardv1";

service RewardService {
  rpc PreReward(PreRewardRequest) returns (PreRewardResponse);
  rpc GetReward(GetRewardRequest) returns (GetRewardResponse);
}

message GetRewardRequest {
//  rid 和 打赏的人
  int64 rid = 1;
  int64 uid = 2;
}

// 正常来说，对于外面的人来说只关心打赏成功了没
// 不要提前定义字段，直到有需要
message GetRewardResponse {
  RewardStatus status =1;
}

enum RewardStatus {
    RewardStatusUnknown = 0;
    RewardStatusInit = 1;
    RewardStatusPayed = 2;
    RewardStatusFailed = 3;
}

message PreRewardRequest {
  // 代表被打赏的东西
  string biz = 1;
  int64 biz_id = 2;
  // 给用户看的，让用户明白自己打赏了什么东西
  string biz_name = 3;
  // 被打赏的人，收钱的人
  int64 target_uid = 4;
  // 打赏的人，付钱的人
  int64 uid = 5;
  // 打赏的金额
  int64 amt = 6;
}

message PreRewardResponse {
  //
  string code_url = 1;
  // 代表这一次打赏的 id
  int64 rid = 2;
}
